[package]
name = "rustchef"
version = "1.0.0"
edition = "2021"
authors = ["Cheikh Melainine <22027@supnum.mr>"]
description = "A CyberChef-inspired CLI data transformation tool"

[[bin]]
name = "rustchef"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
hex = "0.4"
urlencoding = "2.1"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
digest = "0.10"
regex = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
